# abseil-hello

./: .gitignore  README.md  azure-pipelines.yml
bazel-hello/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-bazel-hello  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  hello.cc  hello.h  hello_main.cc  hello_test.cc  weather.cc  weather.h  weather_test.cc
cmake-hello/: CMakeLists.txt  README.md  main.cc
